# adrina-imu

./: CMakeLists.txt  README.md  package.xml  upload_to_arduino.sh
arduino/: MPU6050.cpp  MPU6050.h  arduino.ino
msg/: IMU.msg
scripts/: adrina_imu_node.py
