<?xml version="1.0"?>
<package format="2">
  <name>adrina_imu</name>
  <version>0.0.1</version>
  <description>The adrina_imu package</description>

  <maintainer email="zibaeiahmadreza@gmail.com">Aiden Zibaei</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
